# AgentHub2

./: .gitignore  README.md
agenthub-backend/: .env.example  .gitignore  README.md  agenthub.db  openapi.json  pyproject.toml
agenthub-backend/agenthub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agenthub-backend/app/: main.py
agenthub-backend/app/agent_runtime/: README.md  __init__.py  agent_run_executor.py  engine.py  engine_factory.py  executor.py  facade.py  internal_llm.py  manager_runtime.py  memory_builder.py  message_store.py  schemas.py  toolkit_builder.py  trace.py  types.py
agenthub-backend/app/api/: acp_providers.py  agent_instances.py  agent_profiles.py  agent_runs.py  agents.py  ai.py  auth.py  deployments.py  executions.py  group_tasks.py  groups.py  mcps.py  members.py  messages.py  previews.py  project_code.py  skills.py  tools.py  users.py  workspaces.py  ws_groups.py
agenthub-backend/app/bootstrap_runtime/: README.md  __init__.py  facade.py  schemas.py  trace.py
agenthub-backend/app/common/: event_types.py  file_utils.py  json_utils.py  project_prompt.py  snowflake.py
agenthub-backend/docs/: architecture.md  database.md  phases.md
agenthub-backend/scripts/: init_db.py  seed_demo.py
agenthub-backend/tests/: test_agent_tool_loader.py  test_auth_register.py  test_executor_unit.py  test_group_creation.py  test_group_task_runs.py  test_group_visibility.py  test_health.py  test_manager_tool_loader.py  test_mentions.py  test_personal_group_member_limit.py  test_project_preview_and_conversation.py  test_runtime_pipeline.py
(+409 files in other folders)
