[project]
name = "agenthub-backend"
version = "0.1.0"
description = "Backend service for AgentHub built with FastAPI, AgentScope, and SQLite."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "agentscope>=1.0.0",
  "httpx>=0.27.0",
  "pyjwt>=2.9.0",
  "list-tools>=0.0.1",
  "agent-client-protocol>=0.10.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.5.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true
